=== 4.2.3 / 2016-??-??

* Bug fixes
  * Ensure badge data is included in result of JsonIndex template.

=== 4.2.2 / 2016-02-09

* Bug fixes
  * Include lib/rdoc/generator/pot/* in built gem


=== 4.2.1 / 2015-12-22

* Bug fixes
  * Fixed infinite loop with CR #339 by @nobu
  * Allow rdoc run with --disable-gems #340  by @luizluca
  * Don't store full path in GZipped js files #341 by @voxik
  * Fix relative path names for drive letters #367 by @nobu
  * Fix for valid syntax `class C end` parsing #368 by @nobu


=== 4.2.0 / 2014-12-06

* Major enhancements
  * RDoc can now produce translation files for use with gettext.  See
    RDoc::Generator::POT for a workflow for creating translations of your
    documentation.  Pull request #254 by Kouhei Sutou.

* Minor enhancements
  * RDoc now allows any single-word macro before a C method implementation.
    Issue #722 by Hanmac.
  * Now :all is a synonym for :private for RDoc::Options#visibility= to match
    the --all command line option.  Pull request #276 by Zachary Scott.
  * Running rake for the first time now installs racc.  Pull request #285 by
    Kouhei Sutou.
  * Added <code>-h</code> flag to also display help.  Issue #300 by Ryan Davis
  * search_index.js is now loaded asynchronously for improved performance.
  * Allow +X::Y+ as typewriter text.  Issue #319, pull request #322 by Jeremy
    Evans.
  * Added RDoc::RI::Task for building ri data easily through rake.  Pull
    request #332 by Zachary Scott.
  * A gzipped search index is generated for servers configured to use
    precompressed files.  Pull request #334 by Zachary Scott.
  * CSS files now live under /css relative to the document root.  Pull request
    #335 by Zachary Scott.
  * Improved detection of valid ruby in verbatim sections.  Pull request #333
    by Jeremy Evans.

* Bug fixes
  * Fixed HTML labels for cross-browser compatibility.  This breaks existing
    links but enables cross-browser compatibility.  Pull request #330 by Jens
    Wille.