@@ -2,6 +2,8 @@
 
 * Bug fixes
   * Ensure badge data is included in result of JsonIndex template.
+  * Ensure items in the nil section are displayed in HTML output.  Issue #399
+    by Daniel Svensson.
 
 === 4.2.2 / 2016-02-09
 
